Adding filtering and sorting and delete endpoint
